@@ -2,6 +2,7 @@
 
 	* logview-findbar.c (logview_findbar_populate): Add a spacer tool
 	item so the close button is at the right end of the find bar.
+	(logview_findbar_populate): Add labels to the previous/next buttons.
 
 	* logview.c (logview_search): Hook up the new find bar.
 
